--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -73,8 +73,7 @@ post_class: post-template
             </div>
             <!-- End Prev/Next -->
             
-            
-             <!-- Author Box -->
+             <!-- Author Box 
                 {% if page.author %}				
 				<div class="row post-top-meta">
 					<div class="col-md-2">
@@ -84,12 +83,11 @@ post_class: post-template
 						<a target="_blank" class="link-dark" href="{{ author.web }}">{{ author.display_name }}</a><a target="_blank" href="{{ author.twitter }}" class="btn follow">Follow</a>
 						<span class="author-description">{{ author.description }}</span>						
 					</div>
-				</div>				
+				</div>		-->		
                 {% endif %}
             
-            
             <!-- Begin Comments
-            ================================================== -->
+            ==================================================
             <section>
             <div id="comments">                          
                 {% include disqus.html %} 
@@ -98,7 +96,7 @@ post_class: post-template
             <!--End Comments
             ================================================== -->
             
-            
+        
 
 		</div>
 		<!-- End Post -->
