--- a/_sass/bootstrap/mixins/_grid.scss
+++ b/_sass/bootstrap/mixins/_grid.scss
@@ -23,8 +23,8 @@
 @mixin make-row() {
   display: flex;
   flex-wrap: wrap;
-  margin-right: ($grid-gutter-width / -2);
-  margin-left: ($grid-gutter-width / -2);
+  margin-right: ($grid-gutter-width );
+  margin-left: ($grid-gutter-width );
 }
 
 @mixin make-col-ready() {
