--- a/_sass/bootstrap/mixins/_grid.scss
+++ b/_sass/bootstrap/mixins/_grid.scss
@@ -25,6 +25,7 @@
   flex-wrap: wrap;
   margin-right: ($grid-gutter-width );
   margin-left: ($grid-gutter-width );
+  justify-content: center;
 }
 
 @mixin make-col-ready() {
