--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,12 +14,12 @@ post_class: post-template
 		<!-- Post -->        
         {% assign author = site.authors[page.author] %}
         
-		<div class="col-xl-12">
+		<div class="col-sm-16">
             <!-- Post Featured Image -->
 			{% if page.image %}<img class="featured-image img-fluid rounded" src="{{ site.baseurl }}/{{ page.image }}" alt="{{ page.title }}">{% endif %}
 			<!-- End Featured Image -->
 			<div class="mainheading">  
-                           
+
                  <!-- Post Title -->
 				<h1 class="posttitle">{{ page.title }}</h1> 
                
