--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,8 +5,51 @@ archive: false
 post_class: post-template
 ---
 
+<!--- 테스트 레이아웃  
+============================================================================================ -->
+
+---
+layout: default
+disqus: false
+archive: false
+post_class: post-template
+---
+
+<div class="entry-header">
+    <!-- Post Title -->
+    <h1 class="posttitle">{{ page.title }}</h1>
+    <!-- Date  Box -->
+    <div class="d-flex align-items-center mt-4">
+        <div>
+        <span class="post-date"><time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time></span>           
+        {% if page.last_modified_at %}
+        (Updated: <time datetime="{{ page.last_modified_at | date_to_xmlschema }}" itemprop="dateModified">{{ page.last_modified_at | date: "%b %-d, %Y" }}</time>)
+        {% endif %}
+        </div>            
+    </div>
+    {% endif %}
+</div>
+
+<!-- Adsense under title if enabled from _config.yml (change your pub id and slot) -->
+{% if site.adsense == "enabled" %}
+    {% include adsense-under-header.html %}
+{% endif %}
+
+<!-- Featured Image -->
+{% include featured-image.html %}
+
+<!-- Content -->
+{% include article.html %}
+
+<!-- Related Post -->
+{% include related-posts.html %}
+
+
+
+
+
 <!-- Begin Article
-================================================== -->
+================================================== 
 
 	<div class="row">
 		
@@ -85,4 +128,4 @@ post_class: post-template
 	</div>
 
 <!-- End Article
-================================================== -->
+================================================== --> 
