--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,19 +20,17 @@ post_class: post-template
     </div>
 </div>
 
-<!-- Adsense under title if enabled from _config.yml (change your pub id and slot) -->
-{% if site.adsense == "enabled" %}
-    {% include adsense-under-header.html %}
-{% endif %}
 
 <!-- Featured Image -->
 {% include featured-image.html %}
 
 <!-- Content -->
-{% include article.html %}
+<div class="article-post serif-font">
+    {{content}}
+  </div>
 
 <!-- Related Post -->
-{% include related-posts.html %}
+{% include pagination.html %}
 
 
 
