--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,20 +8,18 @@ layout: default
             <div class="row gx-5 justify-content-center">
                 <div class="col-lg-6">
                  <div class="text-center mb-5">
-                    <h1 class="fw-bolder">Project Title</h1>
-                     <p class="lead fw-normal text-muted mb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab similique, ducimus ut alias sit accusamus illum, asperiores deserunt dolorum quaerat qui! Ab, quisquam explicabo magni dolores unde beatae quam a.</p>
+                    <h1 class="fw-bolder">{{ post.title }}</h1>
                   </div>
                  </div>
             </div>
          <div class="row gx-5">
             <div class="col-12"><img class="img-fluid rounded-3 mb-5" src="https://dummyimage.com/1300x700/343a40/6c757d" alt="..." /></div>
-            <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
-            <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
          </div>
+
          <div class="row gx-5 justify-content-center">
              <div class="col-lg-6">
              <div class="text-center mb-5">
-                 <p class="lead fw-normal text-muted">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam deserunt architecto enim eos accusantium fugit recusandae illo iste dignissimos possimus facere ducimus odit voluptatibus exercitationem, ex laudantium illum voluptatum corporis.</p>
+                 <p class="lead fw-normal text-muted">{{content}}</p>
                  <a class="text-decoration-none" href="#!">
                      View project
                     <i class="bi-arrow-right"></i>
@@ -29,5 +27,8 @@ layout: default
              </div>
              </div>
          </div>
+            <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+            <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
+         
          </div>
 </section>
