--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,8 +27,9 @@ layout: default
              </div>
              </div>
          </div>
+         <div class="row gx-5">
             <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
             <div class="col-lg-6"><img class="img-fluid rounded-3 mb-5" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." /></div>
-         
+         </div>
          </div>
 </section>
