--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
             <div class="row gx-5 justify-content-center">
                 <div class="col-lg-6">
                  <div class="text-center mb-5">
-                    <h1 class="fw-bolder">{{ post.title }}</h1>
+                    <h1 class="posttitle">{{ post.title }}</h1>
                   </div>
                  </div>
             </div>
