--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,11 +6,13 @@ layout: default
 <section class="py-5">
         <div class="container px-5 my-5">
             <div class="row gx-5 justify-content-center">
-                <div class="col-lg-6">
+            <div class="col-lg-6">
                  <div class="text-center mb-5">
+                    <div class="mainheading">
                     <h1 class="posttitle">{{ post.title }}</h1>
-                  </div>
+                    </div>
                  </div>
+            </div>
             </div>
          <div class="row gx-5">
             <div class="col-12"><img class="img-fluid rounded-3 mb-5" src="https://dummyimage.com/1300x700/343a40/6c757d" alt="..." /></div>
