--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -32,8 +32,8 @@ body {
 }
 @media (max-width: 1366px) {
     .container-xl, .container-lg, .container-md, .container-sm, .container {
-        width:90%;
-        max-width:90%;
+        width:98%;
+        max-width:98%;
         padding:0 25px;
     }
 }
@@ -135,7 +135,7 @@ small, .small {
 /* Pages
 ================================================== */
 .hero {
-    background: #fdd93d;
+    background: #ffffff;
     padding: 5rem 5rem;
 }
 
