--- a/_sass/bootstrap/mixins/_grid.scss
+++ b/_sass/bootstrap/mixins/_grid.scss
@@ -4,8 +4,8 @@
 
 @mixin make-container() {
   width: 100%;
-  padding-right: ($grid-gutter-width / 1.5);
-  padding-left: ($grid-gutter-width / 1.5);
+  padding-right: ($grid-gutter-width / );
+  padding-left: ($grid-gutter-width / );
   margin-right: auto;
   margin-left: auto;
 }
@@ -35,8 +35,8 @@
   // later on to override this initial width.
   width: 100%;
   min-height: 1px; // Prevent collapsing
-  padding-right: ($grid-gutter-width / 2);
-  padding-left: ($grid-gutter-width / 2);
+  padding-right: ($grid-gutter-width / );
+  padding-left: ($grid-gutter-width / );
 }
 
 @mixin make-col($size, $columns: $grid-columns) {
