--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -311,7 +311,11 @@ span.post-name a,span.post-read-more a:hover {
         text-decoration:none;
     }
     img, iframe {
-        border-radius: 0.25rem !important;
+        border-radius: 1rem !important;
+    }
+    img, iframe:hover, {
+        border-radius: 10rem !important;
+        
     }
 }
 
