--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -22,7 +22,7 @@ body {
     background:#fff;
     font-size:17px;
     transition: all 200ms linear;
-    font-family: "Pretendard",sans-serif;
+    font-family: 'Pretendard',sans-serif;
     line-height:1.7;
     color: #333;
     overflow-x:hidden;
@@ -30,7 +30,7 @@ body {
     
 }
 .serif-font {
-    font-family: Pretendard;
+    font-family: 'Pretendard';
 }
 @media (max-width: 1400px) {
     .container-xl, .container-lg, .container-md, .container-sm, .container {
